--- a/me.html
+++ b/me.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-    <html>
-        <body>
-            <h1> Sirawit Sukwattanavit</h1>
-            <p> test test test </p>
-        </body>
-    <html>
+<html>
+    <head>
+        <title> My CV </title>
+    </head>
+    
+    <body>
+        <h1> Sirawit Sukwattanavit</h1>
+        <p> My name is Sirawit Sukwattanavit. Computer engineering student, KMITL.</p>
+        <img src="mypicture.jpg" alt="Sirawit Picture" width="300" height="400">
+    </body>
+</html>
