third commit finish

--- a/me.html
+++ b/me.html
@@ -5,8 +5,46 @@
     </head>
     
     <body>
-        <h1> Sirawit Sukwattanavit</h1>
-        <p> My name is Sirawit Sukwattanavit. Computer engineering student, KMITL.</p>
-        <img src="mypicture.jpg" alt="Sirawit Picture" width="300" height="400">
+        <center>
+        <h1> My Profile</h1>
+        <p> 
+            My name is Sirawit Sukwattanavit. <br>
+            Computer Engineering Student, KMITL. <br> 
+            SID: 62010948 <br> <br>
+        </p>
+        
+        <img src="mypicture.jpg" alt="Sirawit Picture" >
+
+        <p style="font-size: 25px">
+            Subject: Software Development Processes<br>
+        </p>
+
+        </center>
     </body>
+
+    <style>
+        h1, p {
+            font-family: futura;
+            color: whitesmoke ; 
+            text-shadow: 3px 3px 5px black;
+            letter-spacing: 2px;
+        }
+        p {
+            font-size: 20px;
+            line-height: 1.6;
+            letter-spacing: 1.5px;
+        }
+        img {
+            width: 300px;
+            height: 420px;
+            box-shadow: 4px 6px 2px;
+        }
+        body {
+          background-image: url('bg4.jpg');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: cover;
+        }
+    </style>
+
 </html>
