--- a/me.html
+++ b/me.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
+
         <title> My CV </title>
     </head>
     
@@ -10,7 +13,7 @@
         <p> 
             My name is Sirawit Sukwattanavit. <br>
             Computer Engineering Student, KMITL. <br> 
-            SID: 62010948 <br> <br>
+            SID: 62010948 <br>
         </p>
         
         <img src="mypicture.jpg" alt="Sirawit Picture" >
@@ -24,15 +27,15 @@
 
     <style>
         h1, p {
-            font-family: futura;
+            font-family: 'Roboto Condensed', sans-serif;
             color: whitesmoke ; 
             text-shadow: 3px 3px 5px black;
-            letter-spacing: 2px;
+            letter-spacing: 4.5px;
         }
         p {
-            font-size: 20px;
-            line-height: 1.6;
-            letter-spacing: 1.5px;
+            font-size: 25px;
+            line-height: 1.5;
+            letter-spacing: 2.2px;
         }
         img {
             width: 300px;
